# fix_refs

./: .gitignore  CLAUDE.md  Diagram.md  IMPLEMENTATION_SUMMARY.md  PROJECT_AUDIT_REPORT.md  README.md  README1.md  composer.json  csrf.php  csrf.py  index.php  manual_test.php  phpstan.neon  pytest.ini  run.bat  test.php  test.php.md  test2.php  test_integration.php  test_mock.php  test_patterns.php  text_post.php  text_post.py  work.php  work.py
python/: COMPARISON.md  COMPLETION_SUMMARY.md  FULL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PLACEHOLDERS.md  README.md  README_AR.md  example_usage.py  pyproject.toml
python/src/: __init__.py  include_files.py  index.py  md_cat.py  sw.py  test_bot.py
python/src/Parse/: Category.py  Citations.py  Citations_reg.py  __init__.py
python/src/WikiParse/: Template.py  __init__.py  include_it.py
python/src/bg_bots/: __init__.py  fix_bg.py
python/src/bots/: __init__.py  attrs_utils.py  expend_refs.py  mini_fixes_bot.py  months_new_value.py  redirect_help.py  refs_utils.py  remove_duplicate_refs.py  txtlib2.py
python/src/es_bots/: __init__.py  es.py  es_months.py  es_refs.py  section.py
python/src/helps_bots/: __init__.py  en_lang_param.py  missing_refs.py  mv_dots.py  remove_space.py
python/src/infoboxes/: __init__.py  infobox.py  infobox2.py
python/src/pt_bots/: __init__.py  fix_pt_months.py
python/tests/: __init__.py  bootstrap.py  test_attrs_utils.py  test_bg_fixes.py  test_category.py  test_citations_reg.py  test_en_lang_param.py  test_es.py  test_es_months.py  test_es_refs.py  test_es_section.py  test_index.py  test_infobox.py  test_infobox2.py  test_md_cat.py  test_mini_fixes_bot.py  test_mv_dots.py  test_pt_months.py  test_refs_utils.py  test_remove_duplicate_refs.py  test_remove_space.py  test_sw.py
python_src/: .coverage  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_es_refs_debug.py
python_src/pytests/: test_bots_move_dots_after.py  test_index.py  test_remove_space2.py
python_src/pytests/Bots/: test_bots_add_lang_en.py  (+4 more)
python_src/src/: __init__.py  config.py
python_src/tests/: conftest.py  test_armenian_bot.py  test_attrs_utils.py  test_bots_move_dots_after.py  test_category.py  test_citations.py  test_fix_page.py  test_index.py  test_mdwiki_category.py  test_mini_fixes.py  test_months.py  test_polish_bot.py  test_refs_utils.py
(+420 files in other folders)
