[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdwiki-fixrefs"
version = "1.0.0"
description = "A library to parse and fix references in MediaWiki wikitext"
keywords = ["Mediawiki", "Parser", "wikitext"]
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Mr. Ibrahem", email = "ibrahem.al-radaei@outlook.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --color=yes"
